--- a/RepairHub.Mvc/Views/Home/SignUp.cshtml
+++ b/RepairHub.Mvc/Views/Home/SignUp.cshtml
@@ -1,10 +1,10 @@
 ﻿@{
-    ViewData["Title"] = "Вход";
+    ViewData["Title"] = "Регистрация";
 }
 
 <div class="container d-flex justify-content-center align-items-center" style="min-height: 100vh;">
     <div class="text-center">
-        <form asp-action="SignIn" method="post" class="p-3 bg-light rounded">
+        <form asp-action="SignUp" method="post" class="p-3 bg-light rounded">
             <div class="mb-3">
                 <label for="Username" class="form-label">Никнейм</label>
                 <input type="text" class="form-control" name="Username" />
