--- a/RepairHub.Mvc/Views/Shared/_Layout.cshtml
+++ b/RepairHub.Mvc/Views/Shared/_Layout.cshtml
@@ -1,5 +1,5 @@
 ﻿<!DOCTYPE html>
-<html lang="en">
+<html lang="ru">
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -20,24 +20,39 @@
                         <span class="navbar-toggler-icon"></span>
                     </button>
                     <div class="navbar-collapse collapse d-sm-inline-flex justify-content-between">
-                        <ul class="navbar-nav flex-grow-1">
+                        <ul class="navbar-nav flex-grow-1 justify-content-center">
                             <li class="nav-item">
-                                <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Index">Главная</a>
+                                <a class="nav-link text-dark" asp-controller="Application" asp-action="Index">Заявки</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Privacy"></a>
+                                <a class="nav-link text-dark" asp-controller="Equipment" asp-action="Index">Оборудования</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link text-dark" asp-controller="Problem" asp-action="Index">Проблемы</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link text-dark" asp-controller="Status" asp-action="Index">Статусы</a>
+                            </li>
+                            @if(User.IsInRole("1"))
+                            {
+                                <li class="nav-item">
+                                    <a class="nav-link text-dark" asp-controller="User" asp-action="Index">Пользователи</a>
+                                </li>
+                                <li class="nav-item">
+                                    <a class="nav-link text-dark" asp-controller="Role" asp-action="Index">Роли</a>
+                                </li>
+                            }
+                            <li class="nav-item">
+                                <a class="nav-link text-dark" asp-controller="WorkStatus" asp-action="Index">Рабочие статусы</a>
                             </li>
                         </ul>
-                        <ul class="navbar-nav">
-                            <li class="nav-item dropdown">
-                                <a class="nav-link dropdown-toggle text-truncate" href="#" id="userDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                                    @User.Identity.Name
-                                </a>
-                                <ul class="dropdown-menu  ms-auto" aria-labelledby="userDropdown">
-                                    <li><a class="dropdown-item" asp-controller="Home" asp-action="SignOut">Выйти</a></li>
-                                </ul>
+                        <ul class="navbar-nav flex-grow-2">
+                            <li class="nav-item">
+                                <p class="nav-link m-0 text-dark">@User.Identity.Name</p>
                             </li>
-
+                            <li class="nav-item">
+                                <a class="nav-link text-dark" asp-controller="Home" asp-action="SignOut">Выйти</a>
+                            </li>
                         </ul>
                     </div>
                 </div>
@@ -65,8 +80,8 @@
     @if (User.Identity.IsAuthenticated)
     {
         <footer class="border-top footer text-muted">
-            <div class="container">
-                &copy; 2024 - RepairHub - <a asp-area="" asp-controller="Home" asp-action="Privacy">Политика</a>
+            <div class="container text-center">
+                &copy; 2024 RepairHub – <a asp-controller="Home" asp-action="Privacy">Политика</a>
             </div>
         </footer>
     }
