--- a/RepairHub.Mvc/Views/_ViewImports.cshtml
+++ b/RepairHub.Mvc/Views/_ViewImports.cshtml
@@ -1,3 +1,6 @@
 ﻿@using RepairHub.Mvc
 @using RepairHub.Mvc.Models
+@using RepairHub.Domain.Dtos
+@using RepairHub.Database.Entities
+@using RepairHub.Mvc.Infrastructure.Services.Interfaces
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
