--- a/RepairHub.Mvc/Views/Application/Index.cshtml
+++ b/RepairHub.Mvc/Views/Application/Index.cshtml
@@ -18,6 +18,9 @@
     <thead>
         <tr>
             <th>
+                @Html.DisplayNameFor(model => model.Id)
+            </th>
+            <th>
                 @Html.DisplayNameFor(model => model.StatusId)
             </th>
             <th>
@@ -50,15 +53,16 @@
             <th>
                 @Html.DisplayNameFor(model => model.TimeWork)
             </th>
-            <th>
-                @Html.DisplayNameFor(model => model.Id)
-            </th>
+            
             <th></th>
         </tr>
     </thead>
     <tbody>
 @foreach (var item in Model) {
         <tr>
+                <td>
+                    @Html.DisplayFor(modelItem => item.Id)
+                </td>
             <td>
                 @statuses.First(x => x.Id == item.StatusId).Name
             </td>
@@ -92,13 +96,10 @@
             <td>
                 @Html.DisplayFor(modelItem => item.TimeWork)
             </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.Id)
-            </td>
             <td class="text-end">
-                <a class="btn btn-outline-warning" asp-action="Edit" asp-route-id="@item.Id">Изменить</a>
-                <a class="btn btn-outline-primary" asp-action="Details" asp-route-id="@item.Id">Подробнее</a>
-                <a class="btn btn-outline-danger" asp-action="Delete" asp-route-id="@item.Id">Удалить</a>
+                <a class="btn btn-outline-warning my-1" asp-action="Edit" asp-route-id="@item.Id">Изменить</a>
+                <a class="btn btn-outline-primary my-1" asp-action="Details" asp-route-id="@item.Id">Подробнее</a>
+                <a class="btn btn-outline-danger my-1" asp-action="Delete" asp-route-id="@item.Id">Удалить</a>
             </td>
         </tr>
 }
