--- a/RepairHub.Mvc/Views/Shared/_Layout.cshtml
+++ b/RepairHub.Mvc/Views/Shared/_Layout.cshtml
@@ -24,15 +24,21 @@
                             <li class="nav-item">
                                 <a class="nav-link text-dark" asp-controller="Application" asp-action="Index">Заявки</a>
                             </li>
-                            <li class="nav-item">
-                                <a class="nav-link text-dark" asp-controller="Equipment" asp-action="Index">Оборудования</a>
-                            </li>
-                            <li class="nav-item">
-                                <a class="nav-link text-dark" asp-controller="Problem" asp-action="Index">Проблемы</a>
-                            </li>
-                            <li class="nav-item">
-                                <a class="nav-link text-dark" asp-controller="Status" asp-action="Index">Статусы</a>
-                            </li>
+                            @if(User.IsInRole("1") || User.IsInRole("3"))
+                            {
+                                <li class="nav-item">
+                                    <a class="nav-link text-dark" asp-controller="Equipment" asp-action="Index">Оборудования</a>
+                                </li>
+                                <li class="nav-item">
+                                    <a class="nav-link text-dark" asp-controller="Problem" asp-action="Index">Проблемы</a>
+                                </li>
+                                <li class="nav-item">
+                                    <a class="nav-link text-dark" asp-controller="Status" asp-action="Index">Статусы</a>
+                                </li>
+                                <li class="nav-item">
+                                    <a class="nav-link text-dark" asp-controller="WorkStatus" asp-action="Index">Рабочие статусы</a>
+                                </li>
+                            }
                             @if(User.IsInRole("1"))
                             {
                                 <li class="nav-item">
@@ -42,9 +48,6 @@
                                     <a class="nav-link text-dark" asp-controller="Role" asp-action="Index">Роли</a>
                                 </li>
                             }
-                            <li class="nav-item">
-                                <a class="nav-link text-dark" asp-controller="WorkStatus" asp-action="Index">Рабочие статусы</a>
-                            </li>
                         </ul>
                         <ul class="navbar-nav flex-grow-2">
                             <li class="nav-item">
