--- a/RepairHub.Mvc/Views/WorkStatus/Index.cshtml
+++ b/RepairHub.Mvc/Views/WorkStatus/Index.cshtml
@@ -1,7 +1,29 @@
-﻿@{
-    ViewData["Title"] = "Главная";
+﻿@model IEnumerable<RepairHub.Domain.Dtos.WorkStatusDto>
+@{
+    ViewData["Title"] = "Оборудование";
 }
-
-<div class="text-center">
-    <h1 class="display-4">Привет!</h1>
-</div>
+<a asp-action="Create" class="btn btn-primary col-auto py-2">Добавить</a>
+<table class="table">
+    <thead>
+        <tr>
+            <th>
+                @Html.DisplayNameFor(model => model.Name)
+            </th>
+            <th></th>
+        </tr>
+    </thead>
+    <tbody>
+@foreach (var item in Model) {
+        <tr>
+            <td>
+                @Html.DisplayFor(modelItem => item.Name)
+            </td>
+                <td class="text-end">
+                    <a class="btn btn-outline-warning" asp-action="Edit" asp-route-id="@item.Id">Изменить</a>
+                    <a class="btn btn-outline-primary" asp-action="Details" asp-route-id="@item.Id">Подробнее</a>
+                    <a class="btn btn-outline-danger" asp-action="Delete" asp-route-id="@item.Id">Удалить</a>
+                </td>
+        </tr>
+}
+    </tbody>
+</table>
