--- a/RepairHub.Mvc/Views/Application/Create.cshtml
+++ b/RepairHub.Mvc/Views/Application/Create.cshtml
@@ -1,102 +1,119 @@
 ﻿@model RepairHub.Domain.Dtos.ApplicationDto
+@inject IEntityService<Status> status
+@inject IEntityService<Problem> problem
+@inject IEntityService<Equipment> equipment
+@inject IEntityService<WorkStatus> workstatus
+@inject IEntityService<Employee> employee
 
 @{
-    Layout = null;
+    ViewData["Title"] = "Заявки";
+    var statuses = await status.GetAll();
+    var problems = await problem.GetAll();
+    var equipments = await equipment.GetAll();
+    var workstatuses = await workstatus.GetAll();
+    var employees = await employee.GetAll();
 }
-
-<!DOCTYPE html>
-
-<html>
-<head>
-    <meta name="viewport" content="width=device-width" />
-    <title>Create</title>
-</head>
-<body>
-
-<h4>ApplicationDto</h4>
-<hr />
+<a asp-action="Index" class="btn btn-primary col-auto py-2">Вернуться к списку</a>
 <div class="row">
     <div class="col-md-4">
         <form asp-action="Create">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
-            <div class="form-group">
-                <label asp-for="StatusId" class="control-label"></label>
-                <input asp-for="StatusId" class="form-control" />
+            <div class="mb-3">
+                <label asp-for="StatusId" class="form-label"></label>
+                <select asp-for="StatusId" class="form-control">
+                    @foreach (var item in statuses)
+                    {
+                        <option value="@item.Id">@item.Name</option>
+                    }
+                </select>
                 <span asp-validation-for="StatusId" class="text-danger"></span>
             </div>
-            <div class="form-group">
-                <label asp-for="ProblemId" class="control-label"></label>
-                <input asp-for="ProblemId" class="form-control" />
+            <div class="mb-3">
+                <label asp-for="ProblemId" class="form-label"></label>
+                <select asp-for="ProblemId" class="form-control">
+                    @foreach (var item in problems)
+                    {
+                        <option value="@item.Id">@item.Name</option>
+                    }
+                </select>
                 <span asp-validation-for="ProblemId" class="text-danger"></span>
             </div>
-            <div class="form-group">
-                <label asp-for="EquipmentId" class="control-label"></label>
-                <input asp-for="EquipmentId" class="form-control" />
+            <div class="mb-3">
+                <label asp-for="EquipmentId" class="form-label"></label>
+                <select asp-for="EquipmentId" class="form-control">
+                    @foreach (var item in equipments)
+                    {
+                        <option value="@item.Id">@item.Name</option>
+                    }
+                </select>
                 <span asp-validation-for="EquipmentId" class="text-danger"></span>
             </div>
-            <div class="form-group">
-                <label asp-for="WorkStatusId" class="control-label"></label>
-                <input asp-for="WorkStatusId" class="form-control" />
+            <div class="mb-3">
+                <label asp-for="WorkStatusId" class="form-label"></label>
+                <select asp-for="WorkStatusId" class="form-control">
+                    @foreach (var item in workstatuses)
+                    {
+                        <option value="@item.Id">@item.Name</option>
+                    }
+                </select>
                 <span asp-validation-for="WorkStatusId" class="text-danger"></span>
             </div>
-            <div class="form-group">
-                <label asp-for="EmployeeId" class="control-label"></label>
-                <input asp-for="EmployeeId" class="form-control" />
+            <div class="mb-3">
+                <label asp-for="EmployeeId" class="form-label"></label>
+                <select asp-for="EmployeeId" class="form-control">
+                    @foreach (var item in employees)
+                    {
+                        <option value="@item.Id">@item.Name</option>
+                    }
+                </select>
                 <span asp-validation-for="EmployeeId" class="text-danger"></span>
             </div>
-            <div class="form-group">
-                <label asp-for="DateAddition" class="control-label"></label>
+            <div class="mb-3">
+                <label asp-for="DateAddition" class="form-label"></label>
                 <input asp-for="DateAddition" class="form-control" />
                 <span asp-validation-for="DateAddition" class="text-danger"></span>
             </div>
-            <div class="form-group">
-                <label asp-for="DateEnd" class="control-label"></label>
+            <div class="mb-3">
+                <label asp-for="DateEnd" class="form-label"></label>
                 <input asp-for="DateEnd" class="form-control" />
                 <span asp-validation-for="DateEnd" class="text-danger"></span>
             </div>
-            <div class="form-group">
-                <label asp-for="Comment" class="control-label"></label>
+            <div class="mb-3">
+                <label asp-for="Comment" class="form-label"></label>
                 <input asp-for="Comment" class="form-control" />
                 <span asp-validation-for="Comment" class="text-danger"></span>
             </div>
-            <div class="form-group">
-                <label asp-for="FirstName" class="control-label"></label>
+            <div class="mb-3">
+                <label asp-for="FirstName" class="form-label"></label>
                 <input asp-for="FirstName" class="form-control" />
                 <span asp-validation-for="FirstName" class="text-danger"></span>
             </div>
-            <div class="form-group">
-                <label asp-for="LastName" class="control-label"></label>
+            <div class="mb-3">
+                <label asp-for="LastName" class="form-label"></label>
                 <input asp-for="LastName" class="form-control" />
                 <span asp-validation-for="LastName" class="text-danger"></span>
             </div>
-            <div class="form-group">
-                <label asp-for="MiddleName" class="control-label"></label>
+            <div class="mb-3">
+                <label asp-for="MiddleName" class="form-label"></label>
                 <input asp-for="MiddleName" class="form-control" />
                 <span asp-validation-for="MiddleName" class="text-danger"></span>
             </div>
-            <div class="form-group">
-                <label asp-for="Cost" class="control-label"></label>
+            <div class="mb-3">
+                <label asp-for="Cost" class="form-label"></label>
                 <input asp-for="Cost" class="form-control" />
                 <span asp-validation-for="Cost" class="text-danger"></span>
             </div>
-            <div class="form-group">
-                <label asp-for="TimeWork" class="control-label"></label>
+            <div class="mb-3">
+                <label asp-for="TimeWork" class="form-label"></label>
                 <input asp-for="TimeWork" class="form-control" />
                 <span asp-validation-for="TimeWork" class="text-danger"></span>
             </div>
-            <div class="form-group">
-                <input type="submit" value="Create" class="btn btn-primary" />
+            <div class="mb-3">
+                <input type="submit" value="Создать" class="btn btn-primary" />
             </div>
         </form>
     </div>
 </div>
-
-<div>
-    <a asp-action="Index">Back to List</a>
-</div>
-
 @section Scripts {
     @{await Html.RenderPartialAsync("_ValidationScriptsPartial");}
 }
-</body>
-</html>
